Make no-kurisu the default stylesheet

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <meta name="author" content="Wolf480pl">
   <link rel="license" href="https://creativecommons.org/licenses/by/4.0/">
 
-  <link rel="stylesheet" title="kurisu" href="css/style-kurisu.css">
-  <link rel="alternate stylesheet" title="no kurisu" href="css/style.css">
+  <link rel="alternate stylesheet" title="kurisu" href="css/style-kurisu.css">
+  <link rel="stylesheet" title="no kurisu" href="css/style.css">
   <link rel="canonical" href="https://wolf480.pl/">
 </head>
 <body>
